--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "get-site-urls",
-	"version": "1.1.7",
+	"version": "1.2.0",
 	"description": "Get all of the URL's from a website.",
 	"scripts": {
 		"test": "ava && xo"
@@ -44,6 +44,6 @@
 	"dependencies": {
 		"got": "^9.3.2",
 		"normalize-url": "^4.0.0",
-		"limiter": "^2.1"
+		"throttled-queue": "^1.0.7"
 	}
 }
